Fix shape rendering issue on iOS (Chrome)

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -94,13 +94,15 @@ h1 {
 /* ====================== SPACER ====================== */
 
 .spacer-dark {
-  min-height: 40vh;
-  background-image: url("/assets/background-dark.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  width: 100vw;
+  height: 40vh; 
+  overflow: hidden;
 }
 
-
+.spacer-dark > img {
+  width: 100%;
+  // height: 100%;
+}
 
 /* ====================== SECTIONS ====================== */
 
@@ -125,13 +127,13 @@ h1 {
     font-size: 18px;
   }
 
-  .col-left, .col-right {
-    padding: 2em, 
+  .col-left,
+  .col-right {
+    padding: 2em;
   }
-  
+
   h1 {
     font-size: 50px;
     padding-bottom: 10px;
   }
-
 }
